Updated to handle communication

--- a/src/devtools.html
+++ b/src/devtools.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <a href="./app/index.html"></a>
+    <!-- we use links to teach Parcel what to include -->
+    <a href="app/index.html"></a>
+    <a href="background.ts"></a>
+    <a href="worker.ts"></a>
+    <!-- links prevent a change of name / location -->
     <script src="devtools.ts"></script>
   </body>
 </html>
