--- a/src/devtools.html
+++ b/src/devtools.html
@@ -5,9 +5,11 @@
   </head>
   <body>
     <!-- we use links to teach Parcel what to include -->
-    <a href="app/index.html"></a>
-    <a href="background.ts"></a>
-    <a href="worker.ts"></a>
+    <a href="./manifest.json"></a>
+    <a href="./assets/logo.png"></a>
+    <a href="./app/index.html"></a>
+    <a href="./scripts/background.ts"></a>
+    <a href="./scripts/worker.ts"></a>
     <!-- links prevent a change of name / location -->
     <script src="devtools.ts"></script>
   </body>
