--- a/src/devtools.html
+++ b/src/devtools.html
@@ -7,7 +7,9 @@
     <!-- we use links to teach Parcel what to include -->
     <a href="./manifest.json"></a>
     <a href="./assets/logo.png"></a>
+    <a href="./assets/logo_128.png"></a>
     <a href="./assets/logo_96.png"></a>
+    <a href="./assets/logo_64.png"></a>
     <a href="./assets/logo_48.png"></a>
     <a href="./app/index.html"></a>
     <a href="./scripts/background.ts"></a>
