WIP on new debug API

--- a/src/devtools.html
+++ b/src/devtools.html
@@ -13,7 +13,7 @@
     <a href="./assets/logo_48.png"></a>
     <a href="./app/index.html"></a>
     <a href="./scripts/background.ts"></a>
-    <a href="./scripts/worker.ts"></a>
+    <a href="./scripts/contentScript.ts"></a>
     <!-- links prevent a change of name / location -->
     <script src="devtools.ts"></script>
   </body>
