--- a/src/public/panel.html
+++ b/src/public/panel.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="script.tsx"></script>
+    <script src="panel.js"></script>
   </body>
 </html>
