--- a/src/public/panel.html
+++ b/src/public/panel.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="panel.css">
   </head>
   <body>
     <div id="app"></div>
